# desafio-mirante

./: .env.example  .gitignore  README.md  docker-compose.yml  langgraph.json  pyproject.toml
.specs/features/ai-assisted-modernization/: design.md  spec.md  tasks.md
.specs/features/pipeline-modernizacao-sql-python/: design.md  spec.md  tasks.md
.specs/project/: PROJECT.md  ROADMAP.md  STATE.md
app/: __init__.py
app/api/: schemas.py  server.py
app/graph/: modernization_graph.py  state.py
app/integrations/: llm.py
app/nodes/: generation.py  parsing.py  semantic_analysis.py  validation.py
app/persistence/: __init__.py  database.py  history_repository.py
app/samples/: annex_b_fn_saldo_cliente.sql  annex_c_sp_atualizar_status_contas_inativas.sql  annex_d_sp_transferir_entre_contas.sql  annex_e_sp_processar_lote_taxas.sql  annex_f_sp_relatorio_mensal_cliente.sql  schema.sql
db/: init.sql
outputs/annexes/annex_b_fn_saldo_cliente/: generated.py  report.json
outputs/annexes/annex_c_sp_atualizar_status_contas_inativas/: generated.py  report.json
outputs/annexes/annex_d_sp_transferir_entre_contas/: generated.py  report.json
outputs/annexes/annex_e_sp_processar_lote_taxas/: generated.py  report.json
outputs/annexes/annex_f_sp_relatorio_mensal_cliente/: generated.py  report.json
scripts/: run_samples.py
tests/: test_ai_generation.py  test_ai_repair.py  test_api.py  test_graph.py  test_llm.py  test_semantic_analysis.py  test_validation.py
