[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "desafio-mirante"
version = "0.1.0"
description = "Pipeline hibrido LangGraph para modernizacao de PL/pgSQL em Python 3.14."
requires-python = ">=3.11,<3.15"
dependencies = [
    "fastapi>=0.115.0",
    "langgraph>=0.2.60",
    "langgraph-cli[inmem]>=0.4.0",
    "openai>=1.100.0",
    "psycopg[binary]>=3.2.0",
    "pydantic>=2.9.0",
    "sqlparse>=0.5.0",
    "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.3.0",
    "ruff>=0.8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["db*", "outputs*", "scripts*", "tests*"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["outputs"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
